# nxp-vee-imxrt595-evk

./: .gitignore  BuildKit.readme.txt  EULA-EVAL.txt  Makefile  Makefile.inc  README.md  SCR-nxpvee-mimxrt595-evk.txt  west.yml
Documentation/: README.md
Licenses/: MICROEJ_SDK_EULA.txt
MIMXRT595-evk_platform-CM4hardfp_GCC48-1.0.0/: .project
MIMXRT595-evk_platform-CM4hardfp_GCC48-1.1.0/: .project
MIMXRT595-evk_platform-CM4hardfp_GCC48-1.2.0/: .project
nxpvee-mimxrt595-evk-round-apps/: .classpath  .gitignore  .project  module.ant  module.ivy
nxpvee-mimxrt595-evk-round-apps/launchers/: AnimatedMascot (EMB).launch  AnimatedMascot (SIM).launch  SimpleGFX (EMB).launch  SimpleGFX (SIM).launch
nxpvee-mimxrt595-evk-round-apps/src/main/resources/images/: mascot.xml
nxpvee-mimxrt595-evk-round-bsp/: .project
nxpvee-mimxrt595-evk-round-bsp/projects/common/scripts/: s2s.bat  s2s.sh
nxpvee-mimxrt595-evk-round-bsp/projects/common/sdk_makefile/: Makefile
nxpvee-mimxrt595-evk-round-bsp/projects/common/sdk_makefile/cmsisdap_support/: MIMXRT595S_part.xml  gdb.commands
nxpvee-mimxrt595-evk-round-bsp/projects/common/sdk_makefile/debug/: jlink.gdb  jlink_gdb.bat  jlink_gdb.sh
nxpvee-mimxrt595-evk-round-bsp/projects/microej/: SYSVIEW_RT595.txt  cco_freetype.properties  cco_harfbuzz.properties  cco_microui-vglite.properties  cco_microui.properties  cco_microvg-vglite.properties  cco_microvg.properties  microej_freertos.xml
nxpvee-mimxrt595-evk-round-bsp/projects/microej/armgcc/: CMakeLists.txt  build_cmake.bat  build_cmake.sh  clean.bat  clean.sh  makefile.gmake  mimxrt595_freertos-bsp_Debug_library.ld  prog.py  sources.mk
nxpvee-mimxrt595-evk-round-bsp/projects/microej/armgcc/scripts/: Jlink.cmd  build.bat  build.sh  run.bat  run.sh
nxpvee-mimxrt595-evk-round-bsp/projects/microej/board/inc/: board.h  clock_config.h  display_support.h
nxpvee-mimxrt595-evk-round-bsp/projects/microej/board/src/: board.c  display_support.c  pin_mux.c
nxpvee-mimxrt595-evk-round-bsp/projects/microej/freertos/inc/: FreeRTOSConfig.h
nxpvee-mimxrt595-evk-round-bsp/projects/microej/lowpower/: .gh-copyright.template
nxpvee-mimxrt595-evk-round-bsp/projects/microej/lowpower/inc/: fsl_tickless_rtc.h  power_manager.h
nxpvee-mimxrt595-evk-round-bsp/projects/microej/lowpower/src/: fsl_tickless_rtc.c  power_manager.c
nxpvee-mimxrt595-evk-round-bsp/projects/microej/scripts/: .gitignore  build.bat  build.sh  run.bat  run.sh  set_project_env.bat
nxpvee-mimxrt595-evk-round-bsp/projects/microej/vglite_support/: vglite_support.c  vglite_support.h
nxpvee-mimxrt595-evk-round-bsp/projects/microej/vglite_window/: vglite_window.c  vglite_window.h
nxpvee-mimxrt595-evk-round-bsp/projects/nxpvee-ui/armgcc/: .gitignore  CMakeLists.txt  build_all.bat  build_all.sh  build_debug.bat  build_debug.sh  build_release.bat  build_release.sh  clean.bat  clean.sh  flags.cmake  mimxrt595_freertos-bsp_Debug.ld  mimxrt595_freertos-bsp_Debug_memory.ld
nxpvee-mimxrt595-evk-round-bsp/projects/nxpvee-ui/mcuide/: .cproject  .project
nxpvee-mimxrt595-evk-round-bsp/projects/nxpvee-ui/sdk_makefile/: Makefile  jlink_flash.script
nxpvee-mimxrt595-evk-round-bsp/sdk/: .gitignore
nxpvee-mimxrt595-evk-round-bsp/sdk/components/ft3267/: fsl_ft3267.c  fsl_ft3267.h
nxpvee-mimxrt595-evk-round-bsp/sdk/components/video/: fsl_video_common.c  fsl_video_common.h
nxpvee-mimxrt595-evk-round-bsp/sdk/devices/MIMXRT595S/: MIMXRT595S_cm33.h  MIMXRT595S_dsp.h  MIMXRT595S_dsp_features.h  fsl_device_registers.h  system_MIMXRT595S_cm33.c  system_MIMXRT595S_cm33.h  system_MIMXRT595S_dsp.c  system_MIMXRT595S_dsp.h
nxpvee-mimxrt595-evk-round-bsp/sdk/middleware/vglite/: middleware_vglite_MIMXRT595S_cm33.cmake  middleware_vglite_elementary_MIMXRT595S_cm33.cmake
nxpvee-mimxrt595-evk-round-bsp/sdk/rtos/amazon-freertos/: ChangeLogKSDK.txt  PreLoad.cmake  checksums.json
nxpvee-mimxrt595-evk-round-bsp/sdk_overlay/middleware/vglite/: ChangeLogKSDK.txt  LICENSE.txt
nxpvee-mimxrt595-evk-round-bsp/sdk_overlay/rtos/amazon-freertos/: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  directories.txt
nxpvee-mimxrt595-evk-round-bsp/sdk_overlay/rtos/freertos/: CHANGELOG.md
nxpvee-mimxrt595-evk-round-configuration/: .project  LICENSE.txt  configuration.xml  imxrt595evk.platform  module.ant  module.ivy  module.properties  override.module.ant
nxpvee-mimxrt595-evk-round-configuration/bsp/: bsp.properties
nxpvee-mimxrt595-evk-round-configuration/display/: display.properties
nxpvee-mimxrt595-evk-round-configuration/frontpanel/: frontpanel.properties
nxpvee-mimxrt595-evk-round-configuration/microui/: microui.xml
nxpvee-mimxrt595-evk-round-configuration/microui/resources/fonts/: license.txt  microej_system_font.ejf
nxpvee-mimxrt595-evk-round-configuration/microvg/: microvg.properties
nxpvee-mimxrt595-evk-round-configuration/mjvm/: mjvm.properties
nxpvee-mimxrt595-evk-round-fp/: .classpath  .project  module.ivy
nxpvee-mimxrt595-evk-round-fp/src/main/resources/: .gitignore  frontpanel.fp
nxpvee-mimxrt595-evk-round-imageGenerator/: .classpath  .project  module.ivy
nxpvee-mimxrt595-evk-round-mock/: .classpath  .gitignore  .project  README.md  module.ant  module.ivy  module.pro
nxpvee-mimxrt595-evk-round-mock/content/scripts/init-evk-platform-mock-s3/: evk_platform_mock_init.xml
nxpvee-mimxrt595-evk-round-validation/core/java-testsuite-runner-core/: .classpath  .gitignore  .project  CHANGELOG.rst  README.rst  config.properties  module.ant  module.ivy  override.module.ant
nxpvee-mimxrt595-evk-round-validation/core/java-testsuite-runner-core/launchers/: java-testsuite-runner-core.launch
nxpvee-mimxrt595-evk-round-validation/core/java-testsuite-runner-core/validation/: microej-testsuite-common.properties
nxpvee-mimxrt595-evk-round-validation/ui/ui3/: README.rst
nxpvee-mimxrt595-evk-round-validation/ui/ui3/java-testsuite-runner-ui3/: .classpath  .gitignore  .project  CHANGELOG.rst  README.rst  config.properties  config.properties.tpl  module.ant  module.ivy  override.module.ant
(+343 files in other folders)
